my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EBITRN/EBITRN.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EBITRN.dml:13:9: error EBITRN: negative size (2 < 3) of bit range for 'b.r.f'
